"improve" settings page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,4 +4,5 @@ en:
   event_notifications: Event Notifications
   event_notification_publish: Publish
 
-  redmine_event_notifier_enable_notifications: Enable notifications
+  redmine_event_notifier_enable_for: "Enable notifications for:"
+
